Initial commit for feature/ap2-triple-verified-stack

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,6 @@ validations/*.json
 data
 
 genesis_wallets.json
+genesis_studio_triple_verified_stack.py
+COMPLETE_TRUST_STACK_INTEGRATION.md
+MVP_ERC_Based.md
