Multi-payment method support (5 methods: cards, Google Pay, Apple Pay, PayPal, crypto)

--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,4 @@ genesis_wallets.json
 genesis_studio_triple_verified_stack.py
 COMPLETE_TRUST_STACK_INTEGRATION.md
 MVP_ERC_Based.md
+MULTI_PAYMENT_INTEGRATION_SUMMARY.md
