--- a/packages/sdk/pyproject.toml
+++ b/packages/sdk/pyproject.toml
@@ -4,15 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "chaoschain-sdk"
-version = "0.1.0"
+version = "0.1.2"
 description = "Production-ready SDK for building agents on the ChaosChain protocol"
 readme = "README.md"
 license = "MIT"
 authors = [
-    {name = "ChaosChain Labs", email = "hello@chaoschain.com"}
+    {name = "ChaosChain", email = "sumeet.chougule@nethermind.io"}
 ]
 maintainers = [
-    {name = "ChaosChain Labs", email = "hello@chaoschain.com"}
+    {name = "ChaosChain", email = "sumeet.chougule@nethermind.io"}
 ]
 keywords = [
     "ai-agents", 
@@ -22,7 +22,13 @@ keywords = [
     "x402", 
     "process-integrity",
     "web3",
-    "autonomous-agents"
+    "autonomous-agents",
+    "triple-verified-stack",
+    "chaoschain",
+    "google-ap2",
+    "crypto-payments",
+    "agent-commerce",
+    "verifiable-ai"
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -55,8 +61,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "python-dotenv>=1.0.0",
     
-    # IPFS and Storage
-    "ipfshttpclient>=0.8.0",
+    # Note: IPFS storage handled via Pinata REST API (no ipfshttpclient needed)
     
     # Rich console output
     "rich>=13.0.0",
@@ -67,8 +72,8 @@ dependencies = [
     # Date/time handling
     "python-dateutil>=2.8.0",
     
-    # Google AP2 Integration (official library from GitHub)
-    "ap2 @ git+https://github.com/google-agentic-commerce/AP2.git@main",
+    # Note: Google AP2 integration available but requires manual installation
+    # Install with: pip install git+https://github.com/google-agentic-commerce/AP2.git@main
 ]
 
 [project.optional-dependencies]
@@ -77,6 +82,11 @@ payments = [
     "stripe>=7.0.0",
     "paypalrestsdk>=1.13.0",
     # Google Pay and Apple Pay integrations are handled via web APIs
+]
+ap2 = [
+    # Note: AP2 must be installed manually from GitHub
+    # This section serves as documentation only
+    # Install with: pip install git+https://github.com/google-agentic-commerce/AP2.git@main
 ]
 dev = [
     "pytest>=7.0.0",
@@ -94,10 +104,10 @@ docs = [
 
 [project.urls]
 Homepage = "https://chaoscha.in"
-Documentation = "https://docs.chaoschain.com"
+Documentation = "https://docs.chaoscha.in"
 Repository = "https://github.com/ChaosChain/chaoschain"
 "Bug Reports" = "https://github.com/ChaosChain/chaoschain/issues"
-"Source Code" = "https://github.com/ChaosChain/chaoschain"
+"Source Code" = "https://github.com/ChaosChain/chaoschain/tree/main/packages/sdk"
 
 [tool.setuptools.packages.find]
 where = ["."]
