--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@0glabs/0g-serving-broker": "^0.5.4",
+    "@0glabs/0g-ts-sdk": "^0.3.1",
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0"
   }
